# xp_som

./: .gitignore  CMakeLists.txt  README.md  env_data_xp.R.RData  env_data_xp_pv.R..RData  pt.test.OA:S.R  pv.test.OA:V.R  todo_visugl.org  waf  wscript
r_scripts/: bac_learnpomdp.R  bacasable.R  dsom_plot.R  hmm_stat.R  pomdp_stat.R  pomdp_stat_OA:S.R  pomdp_stat_OA:V.R  rdsom_test.R  session_p05ABCB_161124.R  utils.R
src/: CMakeLists.txt  axis.hpp  cmap_plotter.hpp  colormap.hpp  curve.hpp  distribution.hpp  figure.hpp  figure_ant.hpp  fixedqueue.hpp  gl_plot.hpp  gl_utils.hpp  img_plotter.hpp  json_wrapper.hpp  layer.hpp  mackeyglass.hpp  noise.hpp  plotter.hpp  reservoir.hpp  ridge_regression.hpp  scatter.hpp  simul.hpp  utils.hpp  utils_gsl.hpp  veridis_cmap.hpp  visugl.hpp  window.hpp  window_static.hpp  wscript
src/dsom/: network.hpp  neuron.hpp  r_network.hpp  r_neuron.hpp  rdsom1D_viewer.hpp  utils.hpp
src/pomdp/: pomdp.hpp  prog_dynamique.hpp  trajectory.hpp
src/supelec/: hmm-json.hpp  hmm.hpp  hmm_trajectory.hpp  input.hpp  test-hmm.cpp  wscrip
test/: CMakeLists.txt  simu-000-rob.cpp  simu-001-intersect.cpp  test-000-search.cpp  test-001-window.cpp  test-002-curve-save.cpp  test-002-curve.cpp  test-002-offscreen-curve.cpp  test-002-smartIerators.cpp  test-002-smartcurve.cpp  test-003-ftgl.cpp  test-004-axis.cpp  test-005-dyncurve.cpp  test-006-dynaxe.cpp  test-007-dynfont.cpp  test-008-esn.cpp  test-009-mackey.cpp  test-010-json.cpp  test-011-layer.cpp  test-012-ridge.cpp  test-013-rapijson.cpp  test-014-pomdp.cpp  test-015-noise.cpp  test-016-random.cpp  test-017-plot.cpp  test-018-distribution.cpp  test-019-container.cpp  test-020-anttweak.cpp  test-022-img.cpp  test-023-visugl.cpp  wscript
test/dsom/: test-001-eigen.cpp  test-002-neuron.cpp  test-003-network.cpp  test-004-2Dnetwork.cpp  test-005-rneuron.cpp  test-006-1D-rnetwork.cpp  test-007-viewer.cpp  test-008-multifig.cpp  test-009-viewer.cpp  test-010-queue-viewer.cpp  test-011-freqmap.cpp  wscript
test/visugl/: 001-curve.cpp  001-curveoffscreen.cpp  002-dyncurve.cpp  003-smartcurve.cpp  003-staticwin.cpp  004-img_cmap.cpp  wscript
xp/: CMakeLists.txt  run_xp01.py  run_xp03.py  run_xp04.py  wscript  xp-000-mg.cpp  xp-001-pomdp.cpp  xp-002-cheesemaze.cpp  xp-003-hmm.cpp  xp-004-rdsom.cpp
